    o #738172 by dereine: Fields rewritten to be links with just a fragment did not work.
    o #514128 reverted.
    o #787184 introduce the long awaited "Update and Override" button.
    o by dereine: Test for views_handler_filter_date.
    o #761102 by dereine: test: user default argument.
    o #963382 by aidanlis: Fix typo in mathematical expression field help text.

Views 6.x-3.0-alpha3
    o #705668 by dereine: Fix glossary view, add tests for glossary view.
    o #699426 by dereine: Tests pluggable pagers.
    o #679714 by dereine: test: groupby sum. avg, min, max.
    o #706464 by dereine: Test full(normal) pager plugin.
    o by dereine: Test pluggable access.
    o by dereine: Test pluggable default argument.
    o by dereine: Test exposed forms ui.
    o #681726 by drewish: Allow term edit link field.
    o Test argument validation plugins.
    o #422434 by BWPanda: Correct (NULL) to (NOT NULL) in varios operator descriptions for empty/not empty.
    o #685622 by dereine: Field to provide link to a node revision.
    o #692428 by Roi Danton: Documentation typo fix.
    o #484600 by dereine: Ability to disable the automatic live preview.
    o #694094 by yhahn: Allow default views cache to be reset.
    o #654738 by Scott Reynolds: Offset date filter missing current time.
    o #716236 by jmiccolis: Allow default menu tabs to also have menu entries.
    o #713210 by dereine: Node language settings could persist for subsequent rows if they should not have had a language.
    o #674772 by joachim: Unable to distinguish profile.module fields with same name in different profile categories.
    o #704490 by domidc: Remove invalid short tags from template.
    o #727798 by SteveReher: Fix typo in overrides.html documentation.
    o #621980 by yhahn: Namespace tabs.js to guarantee no conflicts with jQuery UI.
    o #684656 by yhahn: Prevent Views from performing an unneeded variable_set() during block list.